Enhance .gitignore and add GitHub Actions workflow for releases
- Updated .gitignore to include patterns for temporary, backup, test, IDE, OS files, and build artifacts.
- Removed outdated FUNDING.yml file.
- Introduced a new GitHub Actions workflow (release.yml) to automate the release process, including creating a tar.gz archive and uploading release assets.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
-.idea/*
+# Temporary files
+*.tmp
+*.temp
+*~
+
+# Backup files
+*.bak
+*.backup
+
+# Test files
+test_*.sh
+test-release.sh
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Build artifacts
+release-build/
+*.tar.gz
+
+# Local installation directories (for testing)
+~/.bin/TemplateManager*
+~/.local/share/kio/servicemenus/TemplateManager*
+~/.local/share/templates/source/
