Enhance installation and execution of template management scripts
- Added wrapper scripts for Template Creator, Editor, and Eraser to streamline execution.
- Updated install.sh to copy and set permissions for new wrapper scripts.
- Modified desktop files to use wrapper scripts for executing template management actions.
- Improved TemplateCreator.sh, TemplateEditor.sh, and TemplateEraser.sh to handle localization script sourcing more robustly.
- Added a new function to TemplateManagerTools.sh to check for existing templates by name.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,7 @@ jobs:
         # Copy important files only (exclude test scripts)
         cp install.sh uninstall.sh TemplateCreator.sh TemplateEditor.sh TemplateEraser.sh TemplateManagerLocalization.sh TemplateManagerTools.sh release-build/
         cp *.desktop release-build/
+        cp *-wrapper.sh release-build/
         cp *.png release-build/
         cp README.md release-build/
         cp LICENSE release-build/
